src/app/components/skills/skills.component.scss
.skills-container {
    padding: 5% 10%;
    display: flex;
    flex-direction: column;
    text-align: left;
    background-color: var(--bg);
  
    svg {
      color: var(--text); // Angular fa-icon renders to <svg>
    }
  }
  
  .skills-container .skills-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 50px;
  }
  
  .skills-container .skills-grid .skill {
    align-items: center;
    text-align: left;
  }
  

  .chip, .mat-mdc-chip {
    color: var(--text) !important;
    background-color: var(--card) !important;
    font-size: 0.8rem !important;
    height: 25px !important;
  
    span {
      font-family: 'Courier Prime', monospace;
      color: var(--text);
    }
  
    svg {
      height: 15px !important;
    }
  }
  
  .flex-chips {
    line-height: 2;
    margin: 0.5em 0;
  
    .chip-title {
      color: var(--text);
      padding-right: 10px;
    }
  }
  

  .flex-chips .mat-mdc-chip {
    margin-right: 0.5em;
  }
  
  .flex-chips .mat-mdc-chip.mat-mdc-chip-outline {
    background-color: #e0e0e0;
    font-family: source-code-pro, Menlo, Mo
  }

